# serializer version: 1
# name: test_copy_throws_error_for_same_platform_operation[@snow/stage-@stage/snow]
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Both source and target path are remote. This operation is not supported.     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_copy_throws_error_for_same_platform_operation[local/path-other/local/path]
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Both source and target path are local. This operation is not supported.      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_copy_throws_error_for_same_platform_operation[snow://stage-snow://stage/snow]
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Both source and target path are remote. This operation is not supported.     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
